# high-performance-computing

./: README.md
01-CalifornHouse/: README.txt  californiaHousingHPC.csv
Calculo IMC/: IMC_interfaz.h  IMC_modulo.cpp  IMC_principal.cpp  Makefile  RADME.md  README.md
Debug/: prediccion.txt  vector_theta.txt
Desarrollo en clase/Primer corte/: programa 1 de febrero.cpp  programa 25 de enero.cpp  programa 27 de enero.cpp  programa2 27 de enero.cpp
Desarrollo en clase/Primer corte/ModeloLR2/: CMakeLists.txt  main.cpp
Desarrollo en clase/Primer corte/ModeloLR2/Debug/: CMakeCache.txt  Makefile  ModeloLR  ModeloLR.cbp  cmake_install.cmake
Desarrollo en clase/Primer corte/ModeloLR2/EXTRACTION/: extractiondata.cpp  (+1 more)
ModeloLR2/: CMakeLists.txt  main.cpp  regresionlineal.cpp  regresionlineal.h
ModeloLR2/DataSets/: californiaHousing.csv  newdfHousingValue.csv  newdfHousingValueWithHeader.csv
ModeloLR2/Debug/: CMakeCache.txt  Makefile  ModeloLR.cbp  cmake_install.cmake  prediccion.txt  prediccionTest.txt  vectorCosto.txt  vectorCostoTest.txt  vector_theta.txt  vector_thetaTest.txt
ModeloLR2/EXTRACTION/: extractiondata.cpp  extractiondata.h
Parcial_1 HPC3/: CMakeLists.txt  main.cpp
Parcial_1 HPC3/Debug/: Makefile
Primer Taller/: README.md  Resultados  punto1.cpp  punto10.cpp  punto11.cpp  punto2.cpp  punto3.cpp  punto4.cpp  punto5.cpp  punto6.cpp  punto7.cpp  punto8.cpp  punto9.cpp
Taller_Eigen/: CMakeLists.txt  README.md  main.cpp
Taller_Eigen/Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
Taller_Eigen/Logica/: logica.cpp  logica.h
